<resources>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="empty_email_error">You must provide an email</string>
    <string name="invalid_email_error">Email should have a valid format (example@wolox.com.ar)</string>
    <string name="empty_password_error">You must provide a password</string>
    <string name="agree_terms">By joining you agree to our <a href="https://www.wolox.com.ar">Terms &amp; Conditions</a></string>
    <string name="wolox">Wolox</string>
    <string name="news">NEWS</string>
    <string name="profile">PROFILE</string>
    <string name="no_more_news">No more news</string>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Some example TextView</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>

    <string name="invalid_credentials_error">Email or password is incorrect</string>
    <string name="internet_connection_error">No internet connection</string>

</resources>