<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/spacing_large">

    <ImageView
        android:id="@+id/activity_login_login_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/login_cover" />

    <ImageView
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/spacing_none"
        android:src="@drawable/bg_gradient_logo"
        app:layout_constraintTop_toTopOf="@id/activity_login_login_cover"
        app:layout_constraintBottom_toBottomOf="@id/activity_login_login_cover"
        app:layout_constraintLeft_toLeftOf="@id/activity_login_login_cover"
        app:layout_constraintRight_toRightOf="@id/activity_login_login_cover" />

    <ImageView
        android:id="@+id/activity_login_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wolox_logo_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_login_cover"
        app:layout_constraintBottom_toBottomOf="@id/activity_login_login_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/activity_login_login_logo">

        <EditText
            android:id="@+id/activity_login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/activity_login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/activity_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/activity_login_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_button"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/activity_login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/activity_login_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:text="@string/agree_terms"
        android:textColorLink="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>